Allow setting custom routes for update and url

--- a/src/Features/SupportUnitTesting/_runtime_components.json
+++ b/src/Features/SupportUnitTesting/_runtime_components.json
@@ -1,5 +1,5 @@
 [
-    "aJedtpMOp11",
-    "Livewire\\Features\\SupportMorphAwareIfStatement\\BrowserTest",
-    "blade_conditionals_are_handled_properly_by_morphdom"
+    "amHsWs9Ozq6",
+    "Livewire\\Mechanisms\\FrontendAssets\\BrowserTest",
+    "can_register_a_custom_javascript_endpoint"
 ]
