--- a/src/Features/SupportUnitTesting/_runtime_components.json
+++ b/src/Features/SupportUnitTesting/_runtime_components.json
@@ -1,5 +1,5 @@
 [
-    "amHsWs9Ozq6",
-    "Livewire\\Mechanisms\\FrontendAssets\\BrowserTest",
-    "can_register_a_custom_javascript_endpoint"
+    "azH7ZX7hQQU",
+    "Livewire\\Mechanisms\\HandleRequests\\BrowserTest",
+    "can_register_a_custom_update_endpoint"
 ]
