Refactor out LivewireSynth and get tests passing (still lots of refactoring to do)

--- a/src/Features/SupportUnitTesting/_runtime_components.json
+++ b/src/Features/SupportUnitTesting/_runtime_components.json
@@ -1,5 +1,5 @@
 [
-    "av8GOSprcEt",
-    "Livewire\\Features\\SupportReactiveProps\\BrowserTest",
-    "can_pass_a_reactive_property_from_parent_to_child"
+    "ajxLUv5Lcov",
+    "Livewire\\Features\\SupportJavaScriptMethods\\BrowserTest",
+    "can_toggle_a_purely_js_property_with_a_purely_js_function"
 ]
