Start unifying the JS codebase

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,7 +19,7 @@
         </testsuite>
         <testsuite name="Browser">
             <directory suffix="BrowserTest.php">./src</directory>
-            <directory suffix="Test.php">./legacy_tests/Browser</directory>
+            <!-- <directory suffix="Test.php">./legacy_tests/Browser</directory> -->
         </testsuite>
     </testsuites>
 </phpunit>
