--- a/src/Features/SupportUnitTesting/_runtime_components.json
+++ b/src/Features/SupportUnitTesting/_runtime_components.json
@@ -1,5 +1,5 @@
 [
-    "ajxLUv5Lcov",
+    "aNIwAIJ5Gty",
     "Livewire\\Features\\SupportJavaScriptMethods\\BrowserTest",
     "can_toggle_a_purely_js_property_with_a_purely_js_function"
 ]
