Reenable browser tests and make a dedicated LegacyBrowser test suite and update GitHub actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,3 +58,8 @@ jobs:
         run: vendor/bin/phpunit --testsuite Browser
         env:
           RUNNING_IN_CI: true
+
+      - name: Run Legacy Browser tests
+        run: vendor/bin/phpunit --testsuite LegacyBrowser
+        env:
+          RUNNING_IN_CI: true
