--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,7 +18,9 @@
             <!-- <directory suffix="Test.php">./legacy_tests/Unit</directory> -->
         </testsuite>
         <testsuite name="Browser">
-            <!-- <directory suffix="BrowserTest.php">./src</directory> -->
+            <directory suffix="BrowserTest.php">./src</directory>
+        </testsuite>
+        <testsuite name="LegacyBrowser">
             <directory suffix="Test.php">./legacy_tests/Browser</directory>
         </testsuite>
     </testsuites>
