exclude files from packagist

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,9 +13,21 @@
 /.editorconfig      export-ignore
 /github_banner.png  export-ignore
 /.github            export-ignore
+/.vscode            export-ignore
 /babel.config.js    export-ignore
 /jest.config.js     export-ignore
 /rollup.config.js   export-ignore
+/*.bash             export-ignore
+/*.sh               export-ignore
+/package*.json      export-ignore
 /.prettierrc        export-ignore
 /.all-contributorsrc export-ignore
+/stubs              export-ignore
 /squishy            export-ignore
+/docs               export-ignore
+/js                 export-ignore
+/legacy_tests       export-ignore
+/scripts            export-ignore
+/src/**/Tests       export-ignore
+/src/**/*Test.php   export-ignore
+/src/**/Test.php    export-ignore
