Disable github actions fail fast, so remaining tests still run even if there is a flaky test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         php: [7.2, 7.3, 7.4, '8.0', 8.1, 8.2]
         laravel: [7.*, 8.*, 9.*, 10.*]
