--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,7 @@
 /squishy            export-ignore
 /docs               export-ignore
 /js                 export-ignore
+/art                export-ignore
 /legacy_tests       export-ignore
 /scripts            export-ignore
 /src/**/Tests       export-ignore
