--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
         "esbuild": "^0.14.49"
     },
     "dependencies": {
-        "@alpinejs/morph": "^3.10.5",
         "@alpinejs/collapse": "^3.10.5",
         "@alpinejs/focus": "^3.10.5",
-        "@alpinejs/persist": "^3.10.5",
         "@alpinejs/intersect": "^3.10.5",
         "@alpinejs/mask": "^3.10.5",
-        "@alpinejs/history": "^3.10.5",
+        "@alpinejs/morph": "^3.10.5",
+        "@alpinejs/persist": "^3.10.5",
         "@vue/reactivity": "^3.2.45",
-        "alpinejs": "^3.10.5"
+        "alpinejs": "^3.10.5",
+        "nprogress": "^0.2.0"
     }
 }
