--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [8.1, 8.2, 8.3]
-        laravel: [10.*]
+        laravel: [10.*, 11.*]
 
     name: PHP:${{ matrix.php }} / Laravel:${{ matrix.laravel }}
 
