--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit colors="true"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         colors="true"
          stopOnFailure="false"
          backupGlobals="false"
          processIsolation="false"
@@ -8,16 +9,18 @@
          convertDeprecationsToExceptions="true"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true">
-    <testsuites>
-        <testsuite name="Unit">
-            <directory suffix="UnitTest.php">./src</directory>
-        </testsuite>
-        <testsuite name="Browser">
-            <directory suffix="BrowserTest.php">./src</directory>
-        </testsuite>
-        <testsuite name="LegacyBrowser">
-            <directory suffix="Test.php">./legacy_tests/Browser</directory>
-        </testsuite>
-    </testsuites>
+         convertWarningsToExceptions="true"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage/>
+  <testsuites>
+    <testsuite name="Unit">
+        <directory suffix="UnitTest.php">./src</directory>
+    </testsuite>
+    <testsuite name="Browser">
+        <directory suffix="BrowserTest.php">./src</directory>
+    </testsuite>
+    <testsuite name="LegacyBrowser">
+        <directory suffix="Test.php">./legacy_tests/Browser</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
