--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Compile Livewire assets
         run: |
           npm ci
-          npm link ../alpine/packages/persist ../alpine/packages/collapse ../alpine/packages/mask ../alpine/packages/intersect ../alpine/packages/focus ../alpine/packages/anchor ../alpine/packages/morph ../alpine/packages/csp ../alpine/packages/ui ../alpine/packages/alpinejs
+          npm link ./alpine/packages/persist ./alpine/packages/collapse ./alpine/packages/mask ./alpine/packages/intersect ./alpine/packages/focus ./alpine/packages/anchor ./alpine/packages/morph ./alpine/packages/csp ./alpine/packages/ui ./alpine/packages/alpinejs
           npm run build
 
       - name: Get composer cache directory
