--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,6 +20,6 @@
         </testsuite>
     </testsuites>
     <php>
-        <env name="CACHE_STORE" value="array"/>
+        <env name="CACHE_STORE" value="file"/>
     </php>
 </phpunit>
