--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
   "require": {
     "php": "^8.1",
     "symfony/http-kernel": "^6.2|^7.0",
-    "illuminate/support": "^10.0|^11.0",
     "illuminate/database": "^10.0|^11.0",
+    "illuminate/routing": "^10.0|^11.0",
+    "illuminate/support": "^10.0|^11.0",
     "illuminate/validation": "^10.0|^11.0",
     "league/mime-type-detection": "^1.9"
   },
