--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "mockery/mockery": "^1.3.1",
     "phpunit/phpunit": "^10.4",
     "laravel/framework": "^10.0|^11.0",
-    "orchestra/testbench": "^8.0|^9.0",
-    "orchestra/testbench-dusk": "^8.0|^9.0",
+    "orchestra/testbench": "8.20.0|^9.0",
+    "orchestra/testbench-dusk": "8.20.0|^9.0",
     "calebporzio/sushi": "^2.1",
     "laravel/prompts": "^0.1.6"
   },
