--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
         "illuminate/database": "^7.0|^8.0|^9.0|^10.0",
         "illuminate/validation": "^7.0|^8.0|^9.0|^10.0",
+        "symfony/console": "^5.3|^6.0|^7.0",
         "league/mime-type-detection": "^1.9"
     },
     "require-dev": {
