--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
     "orchestra/testbench": "8.20.0|^9.0",
     "orchestra/testbench-dusk": "8.20.0|^9.0",
     "calebporzio/sushi": "^2.1",
-    "laravel/prompts": "^0.1.6"
+    "laravel/prompts": "^0.1.6",
+    "league/flysystem-aws-s3-v3": "^3.0",
+    "league/flysystem-path-prefixing": "^3.3"
   },
   "autoload": {
     "files": [
