--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "phpunit/phpunit": "^10.4",
     "laravel/framework": "^10.15.0|^11.0",
     "orchestra/testbench": "^8.21.0|^9.0",
-    "orchestra/testbench-dusk": "^8.24|^9.1",
+    "orchestra/testbench-dusk": "8.28.0|9.6.0",
     "calebporzio/sushi": "^2.1"
   },
   "autoload": {
