Revert "Attempt to fix dusk tests"
This reverts commit eb7e26d4db05426914681bead2f06e7de5eab419.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,9 +56,7 @@ jobs:
           composer update --prefer-stable --no-interaction
 
       - name: Setup dusk/chrome
-        run: |
-          vendor/bin/dusk-updater detect --no-interaction
-          chmod -R 0755 vendor/laravel/dusk/bin/
+        run: vendor/bin/dusk-updater detect --no-interaction
 
       - name: Run Unit tests
         run: vendor/bin/phpunit --testsuite Unit
