--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,10 +20,12 @@ jobs:
       fail-fast: false
       matrix:
         php: [8.1, 8.2, 8.3]
-        laravel: [10.*, 11.*]
+        laravel: [10.*, 11.*, 12.*]
         exclude:
           - php: 8.1
             laravel: 11.*
+          - php: 8.1
+            laravel: 12.*
 
     name: PHP:${{ matrix.php }} / Laravel:${{ matrix.laravel }}
 
