--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.1, 8.2, 8.3]
+        php: [8.1, 8.2, 8.3, 8.4]
         laravel: [10.*, 11.*]
         exclude:
+          - php: 8.4
+            laravel: 10.*
           - php: 8.1
             laravel: 11.*
 
