--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require-dev": {
     "psy/psysh": "^0.11.22|^0.12",
     "mockery/mockery": "^1.3.1",
-    "phpunit/phpunit": "^10.4",
+    "phpunit/phpunit": "^10.4|^11.5",
     "laravel/framework": "^10.15.0|^11.0|^12.0",
     "orchestra/testbench": "^8.21.0|^9.0|^10.0",
     "orchestra/testbench-dusk": "^8.24|^9.1|^10.0",
