--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,16 +1,16 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Bug Report
-    url: https://github.com/livewire/livewire/discussions/new?category=5-bugs
-    about: Submit a bug or an issue
+  - name: Get help or ask a question
+    url: https://github.com/livewire/livewire/discussions/new?category=1-help
+    about: Ask questions or get help from other community members
 
   - name: Feature request
     url: https://github.com/livewire/livewire/discussions/new?category=3-feature-ideas
     about: For ideas or feature requests
 
-  - name: Support questions & other
-    url: https://github.com/livewire/livewire/discussions/new?category=1-help
-    about: If you have a question or need help using the library
+  - name: Bug Report
+    url: https://github.com/livewire/livewire/discussions/new?category=5-bugs
+    about: Submit a bug report
 
   - name: Documentation issue
     url: https://github.com/livewire/livewire/pulls
